--- a/BlazorTool.Client/Layout/NavMenu.razor
+++ b/BlazorTool.Client/Layout/NavMenu.razor
@@ -1,4 +1,5 @@
 ﻿@using BlazorTool.Client.Services
+@using BlazorTool.Client.Models
 @inject AppStateService AppState
 @inject IStringLocalizer<Resources.UIStrings> Localizer
 @inject UserState UserState
@@ -19,12 +20,16 @@
                     <span class="p-2">@Localizer["My_Page"]</span>
             </NavLink>
         </div>
-        <div class="nav-item">
-            <NavLink class="nav-link d-flex align-items-center px-3 py-2" href="orders">
-                <TelerikSvgIcon Icon="@SvgIcon.TrackChangesEnable" Size="lg"></TelerikSvgIcon>
-                <span class="p-2">@Localizer["NavMenu_Orders"]</span>
-            </NavLink>
-        </div>
+        @* Show Orders if user has any WO related permission *@
+        @if (UserState.HasPermission(PermissionType.ADMIN))
+        {
+            <div class="nav-item">
+                <NavLink class="nav-link d-flex align-items-center px-3 py-2" href="orders">
+                    <TelerikSvgIcon Icon="@SvgIcon.TrackChangesEnable" Size="lg"></TelerikSvgIcon>
+                    <span class="p-2">@Localizer["NavMenu_Orders"]</span>
+                </NavLink>
+            </div>
+        }
         <div class="nav-item">
             <NavLink class="nav-link d-flex align-items-center px-3 py-2" href="scheduler">
                 <TelerikSvgIcon Icon="@SvgIcon.Calendar" Size="lg"></TelerikSvgIcon>
@@ -37,18 +42,21 @@
                 <span class="p-2">@Localizer["NavMenu_Activities"]</span>
             </NavLink>
         </div>
+        @if (UserState.HasPermission(PermissionType.ADMIN))
+        {
         <div class="nav-item">
             <NavLink class="nav-link d-flex align-items-center px-3 py-2" href="devices">
                 <TelerikSvgIcon Icon="@SvgIcon.Gears" Size="lg"></TelerikSvgIcon>
                 <span class="p-2" >@Localizer["NavMenu_Devices"]</span>
             </NavLink>
         </div>
-            <div class="nav-item">
+        }
+        <div class="nav-item">
             <NavLink class="nav-link d-flex align-items-center px-3 py-2" href="settings">
                 <TelerikSvgIcon Icon="@SvgIcon.Sliders" Size="lg"></TelerikSvgIcon>
                 <span class="p-2" aria-hidden="true">@Localizer["NavMenu_Settings"]</span>
             </NavLink>
-            </div>
+        </div>
     </nav>
     <div class="nav-footer">
         <span class="api-info">@AppState.Settings.ApiBaseUrl</span>
