--- a/BlazorTool.Client/Components/WorkOrderComponent.razor
+++ b/BlazorTool.Client/Components/WorkOrderComponent.razor
@@ -1,6 +1,7 @@
 ﻿@using System.Text.Json.Serialization
 @using BlazorTool.Client.Models
 @using System.Globalization
+@using BlazorTool.Client.Pages
 @using BlazorTool.Client.Services
 @inject ApiServiceClient apiService
 @inject IStringLocalizer<Resources.UIStrings> Localizer
@@ -43,7 +44,7 @@
             <div class="device-display-info">
                 <span>@Localizer["Device_LocationName"]: @selectedDevice?.LocationName</span>
                 <span>@Localizer["DeviceDisplay_Place"]: @selectedDevice?.Place</span>
-                <span>@Localizer["DeviceDisplay_DeviceState"]: <span style="color:@(selectedDeviceFullInfo?.LastStatus?.Color ?? "black")">@selectedDeviceFullInfo?.StateName</span></span>
+                <span>@Localizer["DeviceDisplay_DeviceState"]: <span style="border-radius: 7px; padding-inline: 14px; background-color: @(ColorHelper.GetSoftColorByDeviceStateID(selectedDeviceFullInfo?.LastState?.StateID ?? 0));">@selectedDeviceFullInfo?.StateName</span></span>
             </div>
             <div>
                 <span class="badge @StateColor fs-3 shadow">
@@ -678,20 +679,6 @@
                isValidDates();
                if (isValid) OnStateChanged.InvokeAsync(isValid);
         return isValid;
-    }
-
-    private string GetStatusClass(FullDeviceInfo _deviceInfo)
-    {
-        if (_deviceInfo?.LastState == null) return "status-unknown";
-
-        return _deviceInfo.LastState.StateID switch
-        {
-            1 => "status-running",
-            2 => "status-stopped",
-            3 => "status-warning",
-            4 => "status-error",
-            _ => "status-unknown"
-        };
-    }
+    }    
 }
 
