--- a/BlazorTool.Client/Pages/DevicesPage.razor
+++ b/BlazorTool.Client/Pages/DevicesPage.razor
@@ -168,16 +168,16 @@ else
         var styleBuilder = new System.Text.StringBuilder();
         styleBuilder.AppendLine("<style>");
         var uniqueStateIds = fullDeviceInfos.Select(s => s.StateID).Distinct().ToList();
-        // var uniqueColors = uniqueStateIds.ForEach()
-        var uniqueColors = fullDeviceInfos
-            .Where(d => d.LastStatus != null && !string.IsNullOrEmpty(d.LastStatus.Color))
-            .Select(d => d.LastStatus?.Color)
-            .Distinct(StringComparer.OrdinalIgnoreCase);
+        var uniqueColors = uniqueStateIds.Select(s => ColorHelper.GetColorNameByDeviceStateID(s ?? 0)).ToList();
+        // var uniqueColors = fullDeviceInfos
+        //     .Where(d => d.LastStatus != null && !string.IsNullOrEmpty(d.LastStatus.Color))
+        //     .Select(d => d.LastStatus?.Color)
+        //     .Distinct(StringComparer.OrdinalIgnoreCase);
 
         foreach (var color in uniqueColors)
         {
             if (string.IsNullOrEmpty(color)) continue;
-            var softColor = ColorHelper.GetSoftenedColor(color, 0.1f, 1.0f); //TODO make parameters for user setiings
+            var softColor = ColorHelper.GetSoftenedColor(color, 0.4f, 1.0f); //TODO make parameters for user setiings
             var className = $"grid-row-color-{color.Replace("#", "")}";
             styleBuilder.AppendLine($".{className} {{ background-color: {softColor} !important; }}");
         }
@@ -219,20 +219,10 @@ else
         var item = args.Item as FullDeviceInfo;
         if (item != null && item.LastStatus != null && item.LastState?.StateID > 0)
         {            
-            args.Class = $"grid-row-color-{GetColorNameByDeviceStateID(item.LastState?.StateID ?? 0)}";
+            args.Class = $"grid-row-color-{ColorHelper.GetColorNameByDeviceStateID(item.LastState?.StateID ?? 0)}";
         }
     }
-    public static string GetColorNameByDeviceStateID(int state)
-    {
-        return state switch
-        {
-            1 => "green",// 1 => "status-running",
-            2 => "darkblue",// 2 => "status-stopped",
-            3 => "yellow",// 3 => "status-warning",
-            4 => "red",// 4 => "status-error",
-            _ => "black"// _ => "status-unknown"
-        };
-    }
+    
     #region filters
    
     
